WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245917
[LFC][IFC][Floats] Incorrect content placement when first-line style is present in non-quirks mode
https://bugs.webkit.org/show_bug.cgi?id=245917
Summary
[LFC][IFC][Floats] Incorrect content placement when first-line style is prese...
alan
Reported
2022-09-30 17:10:21 PDT
Created
attachment 462738
[details]
Test case see attached test case.
Attachments
Test case
(518 bytes, text/html)
2022-09-30 17:10 PDT
,
alan
no flags
Details
Patch
(8.50 KB, patch)
2022-09-30 22:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.53 KB, patch)
2022-10-01 16:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-09-30 22:03:15 PDT
Created
attachment 462743
[details]
Patch
alan
Comment 2
2022-10-01 16:45:32 PDT
Created
attachment 462756
[details]
Patch
EWS
Comment 3
2022-10-01 18:34:10 PDT
Committed
255069@main
(73f3eb85f0fd): <
https://commits.webkit.org/255069@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462756
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-10-01 18:35:18 PDT
<
rdar://problem/100662521
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug