[LFC][IFC][Floats] Incorrect content placement when first-line style is present in non-quirks mode https://bugs.webkit.org/show_bug.cgi?id=245917

Reviewed by Antti Koivisto.

Use the first line style to compute the initial line height of the first line.

* LayoutTests/fast/inline/tall-first-line-with-multiple-floats-expected.html: Added.
* LayoutTests/fast/inline/tall-first-line-with-multiple-floats.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::InlineFormattingGeometry::initialLineHeight const):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.h:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingQuirks.cpp:
(WebCore::Layout::InlineFormattingQuirks::initialLineHeight const):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingQuirks.h:

Canonical link: https://commits.webkit.org/255069@main