Source/WebCore/layout/formattingContexts/inline/InlineFormattingQuirks.cpp
@@ -67,11 +67,11 @@ bool InlineFormattingQuirks::trailingNonBreakingSpaceNeedsAdjustment(bool isInIn
     return rootStyle.nbspMode() == NBSPMode::Space && (whiteSpace == WhiteSpace::Normal || whiteSpace == WhiteSpace::PreWrap || whiteSpace == WhiteSpace::PreLine);
 }
 
-InlineLayoutUnit InlineFormattingQuirks::initialLineHeight() const
+InlineLayoutUnit InlineFormattingQuirks::initialLineHeight(bool isFirstLine) const
 {
     ASSERT(!layoutState().inStandardsMode());
     // Negative lineHeight value means the line-height is not set
-    auto& rootStyle = formattingContext().root().style();
+    auto& rootStyle = isFirstLine ? formattingContext().root().firstLineStyle() : formattingContext().root().style();
     return rootStyle.lineHeight().isNegative() ? rootStyle.metricsOfPrimaryFont().floatHeight() : rootStyle.computedLineHeight();
 }
 
